Fixed footer overlapping issues

--- a/css/d2sc.css
+++ b/css/d2sc.css
@@ -24,7 +24,7 @@ body {
 }
 
 footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   height: 42px;
@@ -78,6 +78,7 @@ footer img {
 
 #input-box {
 	padding: 5px 10px;
+	margin-bottom: 250px;
 	text-align: center;
   clear: both;
 }
@@ -223,23 +224,23 @@ footer img {
 }
 
 @-webkit-keyframes fadeoutup {
-  from { 
-    top: -20px; 
+  from {
+    top: -20px;
     opacity: 1.0;
   }
-  to { 
-    top: -40px; 
+  to {
+    top: -40px;
     opacity: 0.0;
   }
 }
 
 @keyframes fadeoutup {
-  from { 
-    top: -20px; 
+  from {
+    top: -20px;
     opacity: 1.0;
   }
-  to { 
-    top: -40px; 
+  to {
+    top: -40px;
     opacity: 0.0;
   }
 }
